# soilspecdata

./: README.md  datasets.ossl.html  index.html  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  styles.css  types.html
nbs/: 00_types.ipynb  01_datasets.ossl.ipynb  index.ipynb  nbdev.yml  sidebar.yml
site_libs/bootstrap/: bootstrap-6e5f8ac884c9421445a3ae18c334328f.min.css  bootstrap-fa830d317625ec0feb13c5f11c45e9eb.min.css
soilspecdata/: _modidx.py  types.py
soilspecdata/datasets/: ossl.py
